applications/keycloak/overlay/prelude/route.yaml
---
# Source: keycloak-auth/templates/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: keycloak
spec:
  to:
    kind: Service
    name: keycloak-service
    weight: 100
  port:
    targetPort: https
  tls:
    termination: reencrypt
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
